[gd_scene load_steps=9 format=2]

[ext_resource path="res://HighscoreList/HighscoreList.gd" type="Script" id=1]
[ext_resource path="res://Score/vcr.tres" type="DynamicFont" id=2]
[ext_resource path="res://ScorePopup/vcr_popup.tres" type="DynamicFont" id=3]
[ext_resource path="res://sounds/spawn.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.388235, 0, 0.184314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.203922, 0.00784314, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.00784314, 0.168627, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.203922, 0.00784314, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.388235, 0, 0.184314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.203922, 0.00784314, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="HighscoreList" type="Node2D"]
script = ExtResource( 1 )

[node name="RequestDesc" type="Label" parent="."]
margin_left = 20.0
margin_top = 152.5
margin_right = 220.0
margin_bottom = 167.5
custom_fonts/font = ExtResource( 2 )
text = "Request"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Node2D" parent="."]
visible = false

[node name="Ranks" type="Label" parent="Leaderboard"]
margin_left = 41.0
margin_top = 39.0
margin_right = 69.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 2 )
text = "1
2
3
4
5
6
7
8
9
10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="Label" parent="Leaderboard"]
margin_left = 87.0
margin_top = 39.0
margin_right = 156.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 2 )
text = "1
2
3
4
5
6
7
8
9
10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Label" parent="Leaderboard"]
margin_left = 159.0
margin_top = 39.0
margin_right = 229.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 2 )
text = "1
2
3
4
5
6
7
8
9
10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Own" type="Node2D" parent="."]
visible = false

[node name="OwnRank" type="Label" parent="Own"]
margin_left = 41.0
margin_top = 232.0
margin_right = 80.0
margin_bottom = 247.0
custom_fonts/font = ExtResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnName" type="Label" parent="Own"]
margin_left = 87.0
margin_top = 232.0
margin_right = 156.0
margin_bottom = 247.0
custom_fonts/font = ExtResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnScore" type="Label" parent="Own"]
margin_left = 159.0
margin_top = 232.0
margin_right = 236.0
margin_bottom = 247.0
custom_fonts/font = ExtResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopScoresRequest" type="HTTPRequest" parent="."]
timeout = 10

[node name="OwnRankRequest" type="HTTPRequest" parent="."]
timeout = 10

[node name="SendingDotsTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MainMenu" type="Button" parent="."]
margin_left = 37.0
margin_top = 263.0
margin_right = 204.0
margin_bottom = 296.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.00784314, 0.168627, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
